--- a/Home.html
+++ b/Home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="style.css">
     <title>Home</title>
@@ -12,23 +13,37 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-              <a class="navbar-brand" href="#"></a>
+              <a class="navbar-brand" href="#"><img src="Glam Logo.png" width="50%" height="50%"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
+              <div class="container-services">
+                <i class="bi bi-search"></i>
+                <input id="searchbar" 
+                       onkeyup="search_service()" 
+                       type="text" name="search" 
+                       placeholder="Services..">
+        
+                <ul id='list'>
+                    <li class="services">Hair Stylist</li>
+                    <li class="services">Nail Technician</li>
+                    <li class="services">Make Up</li>
+                    <li class="services">Barber</li>
+                </ul>
+            </div>
               <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                   <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    <a class="nav-link active" aria-current="page" href="#"><i class="bi bi-door-open-fill"></i>Home</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">About Us</a>
+                    <a class="nav-link" href="#"><i class="bi bi-collection"></i>About Us</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Services</a>
+                    <a class="nav-link" href="#"><i class="bi bi-gear-wide-connected"></i>Services</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="#">Contact Us</a>
+                    <a class="nav-link" href="#"><i class="bi bi-telephone-plus"></i>Contact Us</a>
                   </li>
     </header>
     <section>
@@ -40,10 +55,10 @@
                     <br>
                     <br>
                     <p>At Glam Hive we offer a wide range of beauty services that will leave you feeling like a queen. Our services include hair, nails, make-up and many more. We are dedicated to providing you with the best service and making you feel like the queen you are. Book an appointment with us today and let us take care of you.</p>
-                    <button class="btn btn-primary">Learn More</button>
+                    <button class="btn btn-primary">Register/Login</button>
                 </div>
                 <div class="col-md-6">
-                  <img src="c:\Users\B.Dube\Downloads\Untitled design (2).jpg" alt="Glam Hive" width="100%" height="70%">
+                 <img src="Collage.jpg" width="100%" height="90%">
               </div>
             </div>
         </div>
@@ -73,6 +88,6 @@
             </div>
         </div>
     </footer>
-    
+    <script src="glam.js"></script>
 </body>
 </html>
